# ants

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTTING.md  README.md
.github/workflows/: _release-build.yml  release-git.yml  release-music.yml  release-notes.yml  release-shell.yml  release-tasks.yml
modules/git/: index.html  manifest.json  package.json  pnpm-lock.yaml  vite.config.ts
modules/git/src/: App.tsx  index.css  types.ts
modules/git/src-tauri/: Cargo.toml  tauri.conf.json
modules/git/src-tauri/capabilities/: default.json
modules/git/src-tauri/src/: db.rs  git_ops.rs  graph.rs  main.rs
modules/music/: index.html  manifest.json  package.json  pnpm-lock.yaml  vite.config.ts
modules/music/src/: App.tsx  index.css
modules/music/src-tauri/: Cargo.toml  tauri.conf.json
modules/music/src-tauri/capabilities/: default.json
modules/music/src-tauri/src/: db.rs  main.rs
modules/music/src-tauri/src/db/: schema.sql
modules/notes/: index.html  manifest.json  package.json  pnpm-lock.yaml  vite.config.ts
modules/notes/src/: App.tsx  index.css
modules/notes/src-tauri/: Cargo.toml  tauri.conf.json
modules/tasks/: index.html  manifest.json  package.json  pnpm-workspace.yaml  vite.config.ts
modules/tasks/src/: App.tsx  index.css
modules/tasks/src-tauri/: Cargo.toml  tauri.conf.json
modules/tasks/src-tauri/src/: db.rs  main.rs
modules/tasks/src-tauri/src/db/: schema.sql
scripts/: release.mjs
shell/: index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
shell/src/: App.tsx  index.css
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: db.rs  main.rs  scanner.rs
shell/src-tauri/src/db/: schema.sql
shell/src/components/: DashboardView.tsx  ModuleCard.tsx  StoreView.tsx
(+24 files in other folders)
