[package]
name = "git-client"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dirs = "5"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
chrono = { version = "0.4", features = ["serde"] }
